--- a/.github/workflows/iac-scan.yml
+++ b/.github/workflows/iac-scan.yml
@@ -9,6 +9,7 @@ jobs:
       SCAN_PATH: "." # Set the relative path in the repo to scan
       POLICY1: "Default IaC policy"
       POLICY2: "Default secrets policy"
+      POLICY3: "Default sensitive data policy"
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     defaults:
@@ -30,4 +31,4 @@ jobs:
         WIZ_CLIENT_SECRET: ${{ secrets.WIZ_CLIENT_SECRET }}
 
     - name: Run wiz CLI IaC scan
-      run: ./wizcli iac scan --path $SCAN_PATH --policy "$POLICY1" --policy "$POLICY2"
+      run: ./wizcli iac scan --path $SCAN_PATH --policy "$POLICY1" --policy "$POLICY2" --policy "$POLICY3"
