--- a/.github/workflows/iac-scan.yml
+++ b/.github/workflows/iac-scan.yml
@@ -6,7 +6,8 @@ jobs:
     name: 'Wiz-cli IaC Scan'
     runs-on: ubuntu-latest
     env:
-      SCAN_PATH: "." # Set the relative path in the repo to scan
+      SCAN_PATH1: "." # Set the relative path in the repo to scan
+      SCAN_PATH2: "./test/some_code.txt"
       POLICY1: "Default IaC policy"
       POLICY2: "Default secrets policy"
 
@@ -36,4 +37,4 @@ jobs:
       run: ls
 
     - name: Run wiz CLI IaC scan
-      run: ./wizcli iac scan --path $SCAN_PATH --policy "$POLICY1" --policy "$POLICY2"
+      run: ./wizcli iac scan --path $SCAN_PATH2 --path $SCAN_PATH1 --policy "$POLICY1" --policy "$POLICY2"
